--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=E-Com Project
+
+# Database configuration
+#spring.datasource.url=jdbc:postgresql://localhost:5432/dbname
+#spring.datasource.username=postgres
+#spring.datasource.password=password
+
+# Spring data settings
+#spring.jpa.properties.hibernate.default_schema=public
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
+# Enable network server
+server.address=0.0.0.0
